# MyBot

./: .gitignore  CoreConf.conf  EventData.json  Listen.py  Listen_copy.py  Message.py  README.md  Send_Message.py  ToUpload_File.py  bot.py  hh.sh  pyproject.toml  requirement.txt  requirements.txt  start.bat  start.py  start_linux.py  up.py  你干嘛.amr  网易云卡片消息实例.txt
Based/: Activity.py  Config.py  Event.py  EventData.py  Listen.py  Login.py  Message.py  QR_Cout.py  Send_Message.py  Stauts.py  ToUpload_File.py
Config/: config.yaml  config_example.yaml
UsersConf/: 1457362358.conf
test/: MyQr.py  My_QR.py
