[tool.poetry]
name = "mybot"
version = "0.1.0"
description = ""
authors = ["xyrlsz <2434221948@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.1.0"
requests = "^2.31.0"
asyncio = "^3.4.3"
pyjson = "^1.4.1"
pyyaml = "^6.0.1"
websockets = "^12.0"
qrcode = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
